SEMANTIC/hlang-compiler-main/src/grammar/.antlr/HLangParser.py
# Generated from d:/StudyingStuffs/ThirdYear/PPL/PPL/AST/hlang-compiler-main/src/grammar/HLang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class HLangParser ( Parser ):

    grammarFileName = "HLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'STR'", "'if'", "'else'", "'for'", "'return'", 
                     "'func'", "'string'", "'int'", "'float'", "'bool'", 
                     "'const'", "'continue'", "'break'", "'true'", "'false'", 
                     "'let'", "'void'", "'while'", "'in'", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'>>'", "'->'", "'&&'", 
                     "'||'", "'!'", "'='", "'.'", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "','", "'?'", "';'", "':'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "IF", "ELSE", "FOR", "RETURN", 
                      "FUNC", "STRING", "INT", "FLOAT", "BOOL", "CONST", 
                      "CONTINUE", "BREAK", "TRUE", "FALSE", "LET", "VOID", 
                      "WHILE", "IN", "NEWLINE", "ADD", "SUB", "MUL", "DIV", 
                      "MOD", "EQUAL", "NOT_EQUAL", "LESS", "LESS_EQUAL", 
                      "GREATER", "GREATER_EQUAL", "PIPELINE", "ARROW", "AND", 
                      "OR", "NOT", "ASSIGN", "DOT", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "COMMA", "QUESTION", 
                      "SEMICOLON", "COLON", "ID", "INTEGER_LIT", "FLOAT_LIT", 
                      "STRING_LIT", "WS", "COMMENT_INLINE", "COMMENT_BLOCK", 
                      "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_declared_statement_list = 1
    RULE_literal = 2
    RULE_literal_primitive = 3
    RULE_mytype = 4
    RULE_primitive_type = 5
    RULE_array_type = 6
    RULE_array_dimention = 7
    RULE_array_dimention_element = 8
    RULE_array_literal = 9
    RULE_list_array_value = 10
    RULE_list_array_value_element = 11
    RULE_list_expression = 12
    RULE_list_expression_prime = 13
    RULE_expression = 14
    RULE_expression1 = 15
    RULE_expression2 = 16
    RULE_expression3 = 17
    RULE_expression4 = 18
    RULE_expression5 = 19
    RULE_expression6 = 20
    RULE_anonymous_function = 21
    RULE_arrow_mytype_opt = 22
    RULE_builtin_func = 23
    RULE_expression7 = 24
    RULE_function_call = 25
    RULE_list_statement = 26
    RULE_list_statement_prime = 27
    RULE_statement = 28
    RULE_block_statement = 29
    RULE_declared_statement = 30
    RULE_while_statement = 31
    RULE_variables_declared = 32
    RULE_constants_declared = 33
    RULE_const_type_opt = 34
    RULE_function_declared = 35
    RULE_generic_parameter_opt = 36
    RULE_generic_parameter_list = 37
    RULE_generic_parameter_list_opt = 38
    RULE_function_body_container = 39
    RULE_parameter_list = 40
    RULE_parameter_list_opt = 41
    RULE_parameter_list_prime = 42
    RULE_parameter = 43
    RULE_assignment_statement = 44
    RULE_lhs_assignment_statement = 45
    RULE_lhs_assignment_statement_prime = 46
    RULE_assignment_statement_without_semi_for_loop = 47
    RULE_if_statement = 48
    RULE_else_if_clause_opt = 49
    RULE_else_if_clause_list = 50
    RULE_else_if_clause_content = 51
    RULE_else_clause_opt = 52
    RULE_else_clause = 53
    RULE_for_statement = 54
    RULE_for_in_loop = 55
    RULE_break_statement = 56
    RULE_continue_statement = 57
    RULE_call_statement = 58
    RULE_method_call = 59
    RULE_return_statement = 60
    RULE_return_statement_opt = 61

    ruleNames =  [ "program", "declared_statement_list", "literal", "literal_primitive", 
                   "mytype", "primitive_type", "array_type", "array_dimention", 
                   "array_dimention_element", "array_literal", "list_array_value", 
                   "list_array_value_element", "list_expression", "list_expression_prime", 
                   "expression", "expression1", "expression2", "expression3", 
                   "expression4", "expression5", "expression6", "anonymous_function", 
                   "arrow_mytype_opt", "builtin_func", "expression7", "function_call", 
                   "list_statement", "list_statement_prime", "statement", 
                   "block_statement", "declared_statement", "while_statement", 
                   "variables_declared", "constants_declared", "const_type_opt", 
                   "function_declared", "generic_parameter_opt", "generic_parameter_list", 
                   "generic_parameter_list_opt", "function_body_container", 
                   "parameter_list", "parameter_list_opt", "parameter_list_prime", 
                   "parameter", "assignment_statement", "lhs_assignment_statement", 
                   "lhs_assignment_statement_prime", "assignment_statement_without_semi_for_loop", 
                   "if_statement", "else_if_clause_opt", "else_if_clause_list", 
                   "else_if_clause_content", "else_clause_opt", "else_clause", 
                   "for_statement", "for_in_loop", "break_statement", "continue_statement", 
                   "call_statement", "method_call", "return_statement", 
                   "return_statement_opt" ]

    EOF = Token.EOF
    T__0=1
    IF=2
    ELSE=3
    FOR=4
    RETURN=5
    FUNC=6
    STRING=7
    INT=8
    FLOAT=9
    BOOL=10
    CONST=11
    CONTINUE=12
    BREAK=13
    TRUE=14
    FALSE=15
    LET=16
    VOID=17
    WHILE=18
    IN=19
    NEWLINE=20
    ADD=21
    SUB=22
    MUL=23
    DIV=24
    MOD=25
    EQUAL=26
    NOT_EQUAL=27
    LESS=28
    LESS_EQUAL=29
    GREATER=30
    GREATER_EQUAL=31
    PIPELINE=32
    ARROW=33
    AND=34
    OR=35
    NOT=36
    ASSIGN=37
    DOT=38
    LPAREN=39
    RPAREN=40
    LBRACE=41
    RBRACE=42
    LBRACK=43
    RBRACK=44
    COMMA=45
    QUESTION=46
    SEMICOLON=47
    COLON=48
    ID=49
    INTEGER_LIT=50
    FLOAT_LIT=51
    STRING_LIT=52
    WS=53
    COMMENT_INLINE=54
    COMMENT_BLOCK=55
    ERROR_CHAR=56
    UNCLOSE_STRING=57
    ILLEGAL_ESCAPE=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declared_statement_list(self):
            return self.getTypedRuleContext(HLangParser.Declared_statement_listContext,0)


        def EOF(self):
            return self.getToken(HLangParser.EOF, 0)

        def getRuleIndex(self):
            return HLangParser.RULE_program




    def program(self):

        localctx = HLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.declared_statement_list()
            self.state = 125
            self.match(HLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declared_statement_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declared_statement_list(self):
            return self.getTypedRuleContext(HLangParser.Declared_statement_listContext,0)


        def declared_statement(self):
            return self.getTypedRuleContext(HLangParser.Declared_statementContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_declared_statement_list




    def declared_statement_list(self):

        localctx = HLangParser.Declared_statement_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declared_statement_list)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.declared_statement()
                self.state = 128
                self.declared_statement_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.declared_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal_primitive(self):
            return self.getTypedRuleContext(HLangParser.Literal_primitiveContext,0)


        def array_literal(self):
            return self.getTypedRuleContext(HLangParser.Array_literalContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_literal




    def literal(self):

        localctx = HLangParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_literal)
        try:
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14, 15, 50, 51, 52]:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.literal_primitive()
                pass
            elif token in [43]:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.array_literal()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Literal_primitiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER_LIT(self):
            return self.getToken(HLangParser.INTEGER_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(HLangParser.FLOAT_LIT, 0)

        def TRUE(self):
            return self.getToken(HLangParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(HLangParser.FALSE, 0)

        def STRING_LIT(self):
            return self.getToken(HLangParser.STRING_LIT, 0)

        def getRuleIndex(self):
            return HLangParser.RULE_literal_primitive




    def literal_primitive(self):

        localctx = HLangParser.Literal_primitiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_literal_primitive)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7881299347947520) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MytypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(HLangParser.ID, 0)

        def primitive_type(self):
            return self.getTypedRuleContext(HLangParser.Primitive_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(HLangParser.Array_typeContext,0)


        def LPAREN(self):
            return self.getToken(HLangParser.LPAREN, 0)

        def mytype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HLangParser.MytypeContext)
            else:
                return self.getTypedRuleContext(HLangParser.MytypeContext,i)


        def RPAREN(self):
            return self.getToken(HLangParser.RPAREN, 0)

        def ARROW(self):
            return self.getToken(HLangParser.ARROW, 0)

        def getRuleIndex(self):
            return HLangParser.RULE_mytype



    def mytype(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = HLangParser.MytypeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_mytype, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [49]:
                self.state = 140
                self.match(HLangParser.ID)
                pass
            elif token in [7, 8, 9, 10, 17]:
                self.state = 141
                self.primitive_type()
                pass
            elif token in [43]:
                self.state = 142
                self.array_type()
                pass
            elif token in [39]:
                self.state = 143
                self.match(HLangParser.LPAREN)
                self.state = 144
                self.mytype(0)
                self.state = 145
                self.match(HLangParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 154
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = HLangParser.MytypeContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_mytype)
                    self.state = 149
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 150
                    self.match(HLangParser.ARROW)
                    self.state = 151
                    self.mytype(2) 
                self.state = 156
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Primitive_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(HLangParser.INT, 0)

        def FLOAT(self):
            return self.getToken(HLangParser.FLOAT, 0)

        def BOOL(self):
            return self.getToken(HLangParser.BOOL, 0)

        def STRING(self):
            return self.getToken(HLangParser.STRING, 0)

        def VOID(self):
            return self.getToken(HLangParser.VOID, 0)

        def getRuleIndex(self):
            return HLangParser.RULE_primitive_type




    def primitive_type(self):

        localctx = HLangParser.Primitive_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_primitive_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 132992) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_dimention(self):
            return self.getTypedRuleContext(HLangParser.Array_dimentionContext,0)


        def ID(self):
            return self.getToken(HLangParser.ID, 0)

        def primitive_type(self):
            return self.getTypedRuleContext(HLangParser.Primitive_typeContext,0)


        def LBRACK(self):
            return self.getToken(HLangParser.LBRACK, 0)

        def mytype(self):
            return self.getTypedRuleContext(HLangParser.MytypeContext,0)


        def SEMICOLON(self):
            return self.getToken(HLangParser.SEMICOLON, 0)

        def INTEGER_LIT(self):
            return self.getToken(HLangParser.INTEGER_LIT, 0)

        def RBRACK(self):
            return self.getToken(HLangParser.RBRACK, 0)

        def getRuleIndex(self):
            return HLangParser.RULE_array_type




    def array_type(self):

        localctx = HLangParser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_array_type)
        try:
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.array_dimention()
                self.state = 162
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [49]:
                    self.state = 160
                    self.match(HLangParser.ID)
                    pass
                elif token in [7, 8, 9, 10, 17]:
                    self.state = 161
                    self.primitive_type()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.match(HLangParser.LBRACK)
                self.state = 165
                self.mytype(0)
                self.state = 166
                self.match(HLangParser.SEMICOLON)
                self.state = 167
                self.match(HLangParser.INTEGER_LIT)
                self.state = 168
                self.match(HLangParser.RBRACK)
                self.state = 170
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 169
                    self.array_dimention()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_dimentionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_dimention_element(self):
            return self.getTypedRuleContext(HLangParser.Array_dimention_elementContext,0)


        def array_dimention(self):
            return self.getTypedRuleContext(HLangParser.Array_dimentionContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_array_dimention




    def array_dimention(self):

        localctx = HLangParser.Array_dimentionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_array_dimention)
        try:
            self.state = 178
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.array_dimention_element()

                self.state = 175
                self.array_dimention()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.array_dimention_element()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_dimention_elementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(HLangParser.LBRACK, 0)

        def INTEGER_LIT(self):
            return self.getToken(HLangParser.INTEGER_LIT, 0)

        def RBRACK(self):
            return self.getToken(HLangParser.RBRACK, 0)

        def getRuleIndex(self):
            return HLangParser.RULE_array_dimention_element




    def array_dimention_element(self):

        localctx = HLangParser.Array_dimention_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array_dimention_element)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(HLangParser.LBRACK)
            self.state = 181
            self.match(HLangParser.INTEGER_LIT)
            self.state = 182
            self.match(HLangParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

